--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED true)
 configure_file(TodoConfig.h.in TodoConfig.h)
 
 link_libraries(SDL2)
-add_executable(Todo main.cpp)
+add_executable(Todo src/main.cpp src/Window.cpp)
+
+include_directories(src/includes)
 
 target_include_directories(Todo PUBLIC "${PROJECT_BINARY_DIR}")
